--- a/styles.css
+++ b/styles.css
@@ -3,21 +3,25 @@
     margin: 0;
 }
 
+body{
+    background-color: rgba(122, 121, 121, 0.792);
+}
+
 h1{
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 2rem;
     font-family: 'Courier New', Courier, monospace;
-    text-shadow: 1px 1px 1px rgb(80, 80, 80);
+    text-shadow: 1px 1px 1px rgb(53, 53, 53);
 }
 
 #game{
-    
+    background-color: white;
     width: 400px;
     height: 500px;
     margin: 20px auto;
-    border: 1px solid black;
+    border: 3px solid black;
 }
 
 #character{
